--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,8 @@
-/_build
-/db
-/deps
-/*.ez
+_build
+db
+deps
+*.ez
 erl_crash.dump
-/config/*.secret.exs
-/test
-/.git
+config/*.secret.exs
+test
+.git
